# bounty-ecdsa-signature

./: Cargo.toml  README.md  log.txt  note.txt  tutorial.md
examples/: ecdsa.rs
misc/: extended_binary_GCD.py  half_gcd_basic.py  note.txt  sim_window_size.py  window.py
src/: ecdsa.rs  helper.rs  lib.rs  main.rs  numeral.rs  ops.rs  stats.rs
src/ops/: group.rs  group_homogenous.rs  group_jacobian.rs  mersenne.rs  native.rs  primitive.rs  secp256k1.rs
