[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", features = [ "boolean", "shortint", "integer", "internal-keycache"] }
lazy_static = "1.4.0"

[features]
default = []
low_level_timing = ["high_level_timing"]
high_level_timing = []
go_big = []
print_state = []

