[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
tfhe = { git = "https://github.com/zama-ai/tfhe-rs", features = [ "boolean", "shortint", "integer", "internal-keycache"] }
lazy_static = "1.4.0"
logging_timer = "1.1.0"
env_logger = "0.10.0"
ctor = "0.2.4"

[features]
default = []
go_big = []
inw_selector = []

[patch.'https://github.com/zama-ai/tfhe-rs']
tfhe = { git = "https://github.com/y-pakorn/tfhe-rs.git", branch = "scalar-div" }
