[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
num-bigint = { version = "0.4.3", default-features = false }
hex = "0.4.3"
rand = "0.8.5"
rayon = "1.7.0"
lazy_static = "1.4.0"
logging_timer = "1.1.0"
env_logger = "0.10.0"
ctor = "0.2.4"

[features]
default = []
#nightly-avx512 = ["tfhe/nightly-avx512"]
go_big = []
inw_selector = []
binary_gcd = []

[target.'cfg(target_arch = "x86_64")'.dependencies.tfhe]
git = "https://github.com/zama-ai/tfhe-rs"
features = [ "boolean", "shortint", "integer", "internal-keycache", "x86_64"]

[target.'cfg(target_arch = "aarch64")'.dependencies.tfhe]
git = "https://github.com/zama-ai/tfhe-rs"
features = [ "boolean", "shortint", "integer", "internal-keycache", "aarch64"]
